feat(BookingCar): add presenter + hateoas